# fish3

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  generate_audio.py  ocean_aura.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ocean_aura/: __init__.py  audio.py  config.py  fish.py  flow_field.py  hand_detection.py  main.py  particles.py  visualization.py
tests/: test_all_devices.py  test_ambient.py  test_audio.py  test_audio_device.py  test_basic.py  test_is_playing.py  test_loop.py  test_ocean_aura.py  test_raw_stream.py  test_sound.py  test_subprocess_audio.py  test_wav_format.py  test_wav_playback.py  test_winsound.py
