[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean-aura"
version = "1.0.0"
description = "An immersive interactive deep-sea art installation using Python + OpenCV + MediaPipe"
readme = "README.md"
authors = [
    { name = "Ocean Aura Contributors" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Artistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization"
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0"
]

[project.scripts]
ocean-aura = "ocean_aura.main:main"

[project.urls]
"Homepage" = "https://github.com/ocean-aura/ocean-aura"
"Repository" = "https://github.com/ocean-aura/ocean-aura.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ocean_aura" = ["assets/*.wav"]

[tool.setuptools.data-files]
"" = ["assets/*.wav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_alphabetical_sort = true

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
